nowe okno konfiguracji: poprawiona zmiana składni panelu informacyjnego
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4263 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/configuration/dialog.ui
+++ b/varia/configuration/dialog.ui
@@ -195,7 +195,7 @@
 			</group-box>
 
 			<group-box name="Syntax">
-				<syntax-editor caption="Syntax" config-section="Dupa" config-item="Dupa" syntax-group="infopanel" />
+				<syntax-editor caption="Syntax" config-section="Look" config-item="InfoPanelSyntaxFile" category="infopanel" />
 			</group-box>
 		</tab>
 	</section>
