kontrolka do wyboru plików
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4291 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/configuration/dialog-look-userbox-background.ui
+++ b/varia/configuration/dialog-look-userbox-background.ui
@@ -2,7 +2,7 @@
 	<section name="Look">
 		<tab name="Background">
 			<group-box name="Background">
-				<line-edit caption="Background file" config-section="Look" config-item="UserboxBackground" />
+				<select-file caption="Background file" config-section="Look" config-item="UserboxBackground" type="image" />
 			</group-box>
 			<group-box name="Options">
 				<check-box caption="Change image size" config-section="Look" config-item="UserboxBackgroundMove" id="userboxBackgroundMove" />
