możliwość ustawiania obrazka w tle listy kontaktu jako Tiled/Centered/Stretched
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4292 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/configuration/dialog.ui
+++ b/varia/configuration/dialog.ui
@@ -208,7 +208,12 @@
 			</group-box>
 
 			<group-box name="Background">
-				<action-button caption="Background..." id="lookUserboxBackground" />
+				<select-file caption="Background file" config-section="Look" config-item="UserboxBackground" type="image" />
+				<combo-box caption="Display style" config-section="Look" config-item="UserboxBackgroundDisplayStyle">
+					<item value="Tiled" caption="Tiled" />
+					<item value="Centered" caption="Centered" />
+					<item value="Stretched" caption="Stretched" />
+				</combo-box>
 			</group-box>
 <!--
 			<group-box name="Preview">
