tło okna rozmowy
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4293 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/configuration/dialog.ui
+++ b/varia/configuration/dialog.ui
@@ -175,6 +175,10 @@
 				<spin-box caption="Reduce the number of visible messages to" config-section="Chat" config-item="ChatPruneLen" min-value="1" max-value="255" step="1" id="chatPruneLen" />
 			</group-box>
 
+			<group-box name="Background">
+				<select-file caption="Background file" config-section="Look" config-item="ChatBgImage" type="image" />
+			</group-box>
+
 			<group-box name="Advanced">
 				<action-button caption="Advanced..." id="lookChatAdvanced" />
 			</group-box>
