--- a/varia/configuration/dialog-look-chat-advanced.ui
+++ b/varia/configuration/dialog-look-chat-advanced.ui
@@ -7,9 +7,10 @@
 			</group-box>
 
 			<group-box name="Headers and separators">
-				<check-box caption="Remove chat header repetitions" config-section="General" config-item="RemoveChatHeaderRepetitions" />
-				<spin-box caption="Chat header separators height" config-section="Look" config-item="ChatHeaderSeparatorsHeight" min-value="1" max-value="1000" step="1" />
-				<spin-box caption="Interval between header removal" config-section="Look" config-item="IntervalBetweenHeaderRemoval" min-value="1" max-value="1000" step="1" />
+				<check-box caption="Remove chat header repetitions" config-section="General" config-item="NoHeaderRepeat" />
+				<spin-box caption="Chat header separators height" config-section="Look" config-item="HeaderSeparatorHeight" min-value="0" max-value="100" step="1" />
+				<spin-box caption="Interval between header removal" config-section="Look" config-item="NoHeaderInterval" min-value="1" max-value="1439" step="1" />
+				<spin-box caption="Message separators height" config-section="Look" config-item="ParagraphSeparator" min-value="0" max-value="100" step="1" />
 			</group-box>
 
 			<group-box name="Server time">
