oddzielono widget preview od syntax-editor
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4297 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/configuration/dialog.ui
+++ b/varia/configuration/dialog.ui
@@ -234,7 +234,8 @@
 			</group-box>
 
 			<group-box name="Syntax">
-				<syntax-editor caption="Syntax" config-section="Look" config-item="InfoPanelSyntaxFile" category="infopanel" />
+				<syntax-editor caption="Syntax" config-section="Look" config-item="InfoPanelSyntaxFile" category="infopanel" id="infoPanelSyntax" />
+				<preview caption="Preview" id="infoPanelSyntaxPreview" />
 			</group-box>
 		</tab>
 	</section>
