--- a/varia/configuration/dialog.ui
+++ b/varia/configuration/dialog.ui
@@ -233,8 +233,8 @@
 				<check-box caption="Show emoticons in panel" config-section="General" config-item="ShowEmotPanel" id="showEmoticonsInPanel" />
 			</group-box>
 
-			<group-box name="Syntax">
-				<syntax-editor caption="Syntax" config-section="Look" config-item="InfoPanelSyntaxFile" category="infopanel" id="infoPanelSyntax" />
+			<group-box name="Style">
+				<syntax-editor caption="Style" config-section="Look" config-item="InfoPanelSyntaxFile" category="infopanel" id="infoPanelSyntax" />
 				<preview caption="Preview" id="infoPanelSyntaxPreview" />
 			</group-box>
 		</tab>
