--- a/varia/configuration/dialog-look-chat-advanced.ui
+++ b/varia/configuration/dialog-look-chat-advanced.ui
@@ -7,21 +7,21 @@
 			</group-box>
 
 			<group-box name="Headers and separators">
-				<check-box caption="Remove chat header repetitions" config-section="General" config-item="NoHeaderRepeat" />
 				<spin-box caption="Chat header separators height" config-section="Look" config-item="HeaderSeparatorHeight" min-value="0" max-value="100" step="1" />
-				<spin-box caption="Interval between header removal" config-section="Look" config-item="NoHeaderInterval" min-value="1" max-value="1439" step="1" />
 				<spin-box caption="Message separators height" config-section="Look" config-item="ParagraphSeparator" min-value="0" max-value="100" step="1" />
+				<check-box caption="Remove chat header repetitions" config-section="Look" config-item="NoHeaderRepeat" id="noHeaderRepeat" />
+				<spin-box caption="Interval between header removal" config-section="Look" config-item="NoHeaderInterval" min-value="1" max-value="1439" step="1" id="noHeaderInterval" />
 			</group-box>
 
 			<group-box name="Server time">
-				<check-box caption="Remove server time" config-section="General" config-item="RemoveServerTime" id="removeServerTime" />
-				<spin-box caption="Maximum time difference" config-section="Look" config-item="MaxTimeDifference" min-value="1" max-value="1000" step="1" id="maxTimeDifference" />
+				<check-box caption="Remove server time" config-section="Look" config-item="NoServerTime" id="removeServerTime" />
+				<spin-box caption="Maximum time difference" config-section="Look" config-item="NoServerTimeDiff" min-value="1" max-value="1000" step="1" id="maxTimeDifference" />
 			</group-box>
 
-			<group-box name="Background">
+<!-- 			<group-box name="Background"> -->
 <!-- 				<line-edit caption="Full chat style" config-section="General" config-item="FullChatStyle" /> -->
-				<line-edit caption="Chat background image (experimental)" config-section="General" config-item="ChatBgImg" />
-			</group-box>
+<!-- 				<line-edit caption="Chat background image (experimental)" config-section="General" config-item="ChatBgImg" /> -->
+<!-- 			</group-box> -->
 
 			<group-box name="Window title">
 				<line-edit caption="Chat window title syntax" config-section="Look" config-item="ChatContents" />
