alsa_sound przeniesiony do nowego okna konfiguracji
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4333 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/configuration/dialog.ui
+++ b/varia/configuration/dialog.ui
@@ -127,7 +127,7 @@
 					<item value="0" caption="None" />
 				</combo-box>
 				<combo-box caption="Emoticons theme" config-section="Chat" config-item="EmoticonsTheme" id="emoticonsTheme" />
-				<path-list-edit caption="Emiticons paths" config-section="" config-item="" id="emoticonsPaths" />
+				<path-list-edit caption="Emoticons paths" config-section="" config-item="" id="emoticonsPaths" />
 			</group-box>
 		</tab>
 
