nowe okno konfiguracji
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4338 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/sms/configuration/sms.ui
+++ b/modules/sms/configuration/sms.ui
@@ -15,8 +15,8 @@
 				<line-edit caption="SMS custom string" config-section="SMS" config-item="SmsString" id="sms/customString" />
 			</group-box>
 
-			<group-box name="Gateways priorities">
-				<list-box caption="Gateways" id="sms/gateways" />
+			<group-box name="Gateways">
+				<list-box caption="Gateways priorites" id="sms/gateways" />
 				<action-button caption="Up" id="sms/up" />
 				<action-button caption="Down" id="sms/down" />
 			</group-box>
