nowe okno konfiguracji
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4346 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/notify/configuration/notify.ui
+++ b/modules/notify/configuration/notify.ui
@@ -3,6 +3,12 @@
 	<section name="Notifications">
 
 		<tab name="General">
+			<group-box name="Notifications">
+				<combo-box caption="Notifications" config-section="" config-item="" id="notify/notifications" />
+			</group-box>
+		</tab>
+
+		<tab name="Options">
 			<group-box name="Status change">
 				<check-box caption="Notify about all users" config-section="Notify" config-item="NotifyAboutAll" id="notify/notifyAll" />
 				<list-box caption="User list" id="notify/userList" />
@@ -15,9 +21,6 @@
 			</group-box>
 			<group-box name="New message">
 				<check-box caption="Notify about new messages only when window is inactive" config-section="Notify" config-item="NewMessageOnlyIfInactive" />
-			</group-box>
-			<group-box name="Notifications">
-				<combo-box caption="Notifications" config-section="" config-item="" id="notify/notifications" />
 			</group-box>
 		</tab>
 
