mało znaczące zmiany - cleanup
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4347 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/history/configuration/history.ui
+++ b/modules/history/configuration/history.ui
@@ -1,6 +1,6 @@
 <configuration-ui>
-	<section name="History">
-		<tab name="General">
+	<section name="Chat">
+		<tab name="History">
 			<group-box name="Look">
 				<check-box caption="Show emoticons in history" config-section="History" config-item="ShowEmotHist" />
 			</group-box>
