--- a/modules/sound/configuration/sound.ui
+++ b/modules/sound/configuration/sound.ui
@@ -1,8 +1,8 @@
 <configuration-ui>
 
-	<section name="Sound">
+	<section name="Notifications">
 
-		<tab name="General">
+		<tab name="Sound">
 			<group-box name="General">
 				<combo-box caption="Sound theme" config-section="Sounds" config-item="" />
 				<path-list-edit caption="Sound paths" config-section="" config-item="" id="soundPaths" />
