--- a/modules/hints/configuration/hints.ui
+++ b/modules/hints/configuration/hints.ui
@@ -1,5 +1,13 @@
 <configuration-ui>
 
+	<section name="Look">
+		<tab name="Userbox">
+			<group-box name="General">
+				<line-edit caption="Hints over userlist" config-section="Hints" config-item="MouseOverUserSyntax" />
+			</group-box>
+		</tab>
+	</section>
+
 	<section name="Notifications">
 
 		<tab name="Hints">
