--- a/modules/history/configuration/history.ui
+++ b/modules/history/configuration/history.ui
@@ -1,14 +1,14 @@
 <configuration-ui>
 	<section name="Chat">
 		<tab name="History">
-			<group-box name="Look">
-				<check-box caption="Show emoticons in history" config-section="History" config-item="ShowEmotHist" />
+			<group-box name="General">
+				<check-box caption="Save historty" config-section="History" config-item="Logging" id="history/save" />
 			</group-box>
-			<group-box name="Status changes">
+			<group-box name="Status changes" id="history/statusChanges">
 				<check-box caption="Don't show status changes" config-section="History" config-item="DontShowStatusChanges" />
 				<check-box caption="Don't save status changes" config-section="History" config-item="DontSaveStatusChanges" />
 			</group-box>
-			<group-box name="Citation">
+			<group-box name="Citation" id="history/citation">
 				<spin-box caption="Message citation in chat window" config-section="History" config-item="ChatHistoryCitation" min-value="0" max-value="200" step="1" />
 				<slider caption="Don't cite messages older than" config-section="History" config-item="ChatHistoryQuotationTime" min-value="-744" max-value="-1" page-step="24" id="history/dontCiteOldMessages" />
 				<label caption="." id="history/dontCiteOldMessagesLabel" />
@@ -17,7 +17,7 @@
 	</section>
 	<section name="Shortcuts">
 		<tab name="General">
-			<group-box name="History">
+			<group-box name="History" id="history/shortCuts">
 				<hot-key-edit caption="View history" config-section="ShortCuts" config-item="kadu_viewhistory" />
 			</group-box>
 		</tab>
